tests/ts_basic/lesson7/lesson7.ts
// Type inference - xác định data type bằng thuật toán của typescript

let firstName = 'Dao';
// firstName = 20; // error
console.log(firstName);

const languages = ['PHP', 'Java','NodeJS', 96];
languages.push(23);
console.log(languages);